--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
     <button>
         <img src="" alt="">
-        <span>NAME</span>
+        <span>{{selectedUser}}</span>
     </button>
 </div>
