--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
     <button>
-        <img src="" alt="">
-        <span>{{selectedUser}}</span>
+        <img src="assets/users/{{selectedUser.avatar}}" alt="">
+        <span>{{ selectedUser.name }}</span>
     </button>
 </div>
