--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button>
+    <button (click)="onSelectUser()">
         <!-- String Interpolation -->
         <!-- <img src="assets/users/{{selectedUser.avatar}}" alt=""> -->
 
