#30. Defining Component Inputs

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,7 +4,7 @@
         <!-- <img src="assets/users/{{selectedUser.avatar}}" alt=""> -->
 
         <!-- Property Binding -->
-        <img [src]="imagePath()" [alt]="selectedUser().name">
-        <span>{{ selectedUser().name }}</span>
+        <img [src]="imagePath" [alt]="name">
+        <span>{{ name }}</span>
     </button>
 </div>
