--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,6 @@
             <app-user [id]="users[3].id" [avatar]="users[3].avatar" [name]="users[0].name" (select)="onSelectUser($event)"/>
         </li>
     </ul>
+
+    <app-tasks [userid]="selectedUser.name"></app-tasks>
 </main>
