--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,10 @@
         }
     </ul>
 
-    <app-tasks [userid]="selectedUser.name"></app-tasks>
+    @if (userid) {
+        <app-tasks [userid]="selectedUser.name"></app-tasks>
+    }
+    @else {
+        <p>PLease select a user to see tasks</p>
+    }
 </main>
