--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
     </ul>
 
     @if (userid) {
-        <app-tasks [userid]="selectedUser.name"></app-tasks>
+        <app-tasks [name]="selectedUser.name"></app-tasks>
     }
     @else {
-        <p>PLease select a user to see tasks</p>
+        <p>PLease select a user to see their tasks</p>
     }
 </main>
