--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,15 @@
-<p>{{userid}}</p>
+
+<section id="tasks">
+    <header>
+        <h2>{{name}}</h2>
+        <menu>
+            <button>Add Task</button>
+        </menu>
+    </header>
+
+    <ul>
+        <li>
+            <app-task/>
+        </li>
+    </ul>
+</section>
