#45. Outputting User-specific Tasks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     </ul>
 
     @if (userid) {
-        <app-tasks [name]="selectedUser.name"></app-tasks>
+        <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"></app-tasks>
     }
     @else {
         <p>PLease select a user to see their tasks</p>
