--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -8,8 +8,10 @@
     </header>
 
     <ul>
-        <li>
-            <app-task/>
-        </li>
+        @for (task of selectedUserTasks; track task.id) {
+            <li>
+                <app-task/>
+            </li>
+        }
     </ul>
 </section>
