--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
     <ul id="users">
         @for (user of users; track user.id) {
             <li>
-                <app-user [user]="user" (select)="onSelectUser($event)"/>
+                <app-user [user]="user" [selected]="user.id === selectedUserId" (select)="onSelectUser($event)"/>
             </li>
         }
     </ul>
 
-    @if (userid) {
+    @if (selectedUserId) {
         <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"></app-tasks>
     }
     @else {
