--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -7,6 +7,8 @@
         </menu>
     </header>
 
+    <app-add-task/>
+
     <ul>
         @for (task of selectedUserTasks; track task.id) {
             <li>
