--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,13 +1,19 @@
 
+@if (isAddingTask) {
+    <app-new-task />
+}
+
 <section id="tasks">
     <header>
         <h2>{{name}}</h2>
         <menu>
-            <button>Add Task</button>
+            <button (click)="onStartAddTask()">Add Task</button>
         </menu>
     </header>
 
-    <app-add-task/>
+    <!-- My approach to solving the exercise. -->
+     <!-- His seems more straight forward and easy to understans -->
+    <!-- <app-add-task/> -->
 
     <ul>
         @for (task of selectedUserTasks; track task.id) {
