#51. Managing The 'New Task' Dialog

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,7 +1,7 @@
-
 @if (isAddingTask) {
-    <app-new-task />
+    <app-new-task (cancel)="onCancelAddTask()" />
 }
+
 
 <section id="tasks">
     <header>
