#56. Content Projection with ng-content

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div>
+<app-card>
     <button [class.active]="selected" (click)="onSelectUser()">
         <!-- String Interpolation -->
         <!-- <img src="assets/users/{{selectedUser.avatar}}" alt=""> -->
@@ -7,4 +7,4 @@
         <img [src]="imagePath" [alt]="user.name">
         <span>{{ user.name }}</span>
     </button>
-</div>
+</app-card>
